# hamming-archiver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hamming/: hamming.cpp  hamming.h
parser/: parser.cpp  parser.h
tests/: Archive_tests.cpp  CMakeLists.txt
tests/test_orig/: d.txt
write/: write.cpp  write.h
